[package]
name = "patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Compression and decompression of patch files.
bidiff = "1.0.0"
# Pipe is a simple in-memory pipe implementation, there might be a std way too?
pipe = "0.4.0"
# comde is a wrapper around several compression libraries.
# We only use zstd and could depend on it directly instead.
comde = {version = "0.2.3", default-features = false, features = ["zstandard"]}
